hphp/hack/test/typecheck/inout/bad_inout_use_arg1.php
<?hh

function f(inout int $i): void {}

class C {
  private int $x = 42;

  public function test(): void {
    f(inout $this->x);
  }
}
